# sirom

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  mini_ortools_solver.py  optimization_problem.py  pyproject.toml  requirements-api.txt  requirements.txt  test_mini_ortools_solver.py  test_optimization_problem.py
.claude/: settings.json
.claude/hooks/: changelog-guard.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
benchmarks/: README.md  bench_pipeline.py  frontier_diff.py  plot_frontier.py  slack_fix_frontier.md  solver_comparison.md
code/: batch_solver.py  cluster_tree.py  main.py  mini_ortools_solver.py  optimization_problem.py  teste.py
demo/: README.md  __init__.py  app.py  portfolio.py
demo/static/: index.html
demo/vrp/: README.md  docker-compose.yml
demo/vrp/backend/: Dockerfile  app.py  cvrp.py  vrprep.py
demo/vrp/web/: .dockerignore  .gitignore  Dockerfile  next.config.js  package.json
demo/vrp/web/app/: Frontier.tsx  RouteMap.tsx  globals.css  layout.tsx  page.tsx  types.ts
docs/adr/: 0001-retain-optimizationproblem-coefficient.md  0002-separate-portfolio-and-cvrp-builders.md  0003-results-cluster-count-not-stage-tags.md  README.md
scripts/: refresh_release_index.py
sirom/: batch_solver.py  cluster_tree.py  main.py  mini_ortools_solver.py  optimization_problem.py  status_checks.py
sirom/api/: __init__.py  app.py  errors.py  examples.py  jobs.py  schemas.py  service.py
tests/: test_api.py  test_batch_solver.py  test_cluster_tree.py  test_jobs.py  test_mini_ortools_solver.py  test_optimization_problem.py  test_status_checks.py
