[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sirom"
version = "0.1.0"
description = "Simulation based Robust Optimization Method"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "ortools",
    "scikit-learn",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
]

[tool.setuptools.packages.find]
include = ["sirom*"]