[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sirom"
version = "0.4.3"
description = "Simulation based Robust Optimization Method"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "ortools",
    "scikit-learn",
    "scipy",
    "smt",
]

[project.optional-dependencies]
api = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "pydantic==2.13.4",
    "redis==8.0.0",
]
dev = [
    "pytest",
    "mypy",
    "black",
    "httpx",
    "fakeredis",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["sirom*"]