[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sirom"
version = "0.4.4"
description = "Simulation based Robust Optimization Method"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "ortools",
    "scikit-learn",
    "scipy",
    "smt",
]

[project.optional-dependencies]
api = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.2",
    "pydantic==2.13.4",
    "redis==8.0.1",
]
dev = [
    "pytest",
    "mypy",
    "black",
    "httpx",
    "fakeredis",
    "matplotlib",
]

[tool.setuptools.packages.find]
include = ["sirom*"]